<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFC125"
       >

        <TextView
            android:id="@+id/table_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="投资方案一"
            />

    </RelativeLayout>
    <LinearLayout
        android:background="#1E90FF"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/capital"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/month_bonus"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal_rate"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/annual_bonus"
            android:layout_weight="1"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>